// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MulitSelectGroup Accessibility renders the UI snapshots correctly 1`] = `
<fieldset
  className="css-1xdhyk6"
  id="MultiSelectGroup-multiselect-group"
>
  <legend>
    MultiSelectGroup example
  </legend>
  <div
    className="chakra-stack css-ytb711"
    data-testId="multi-select-group"
    id="MultiSelectGroup"
  >
    <div
      className="css-0"
      id="colors"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="colors-button"
          isOpen={false}
          label="Colors"
          multiSelectId="colors"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Colors
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="colors-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
    <div
      className="css-0"
      id="pets"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="pets-button"
          isOpen={false}
          label="Pets"
          multiSelectId="pets"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Pets
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="pets-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
    <div
      className="css-0"
      id="tools"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="tools-button"
          isOpen={false}
          label="Tools"
          multiSelectId="tools"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Tools
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="tools-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
  </div>
</fieldset>
`;

exports[`MulitSelectGroup Accessibility renders the UI snapshots correctly 2`] = `
<fieldset
  className="css-1xdhyk6"
  id="MultiSelectGroup-multiselect-group"
>
  <legend>
    MultiSelectGroup example
  </legend>
  <div
    aria-label="MultiSelectGroup example"
    className="chakra-stack css-ytb711"
    data-testId="multi-select-group"
    id="MultiSelectGroup"
  >
    <div
      className="css-0"
      id="colors"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="colors-button"
          isOpen={false}
          label="Colors"
          multiSelectId="colors"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Colors
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="colors-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
    <div
      className="css-0"
      id="pets"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="pets-button"
          isOpen={false}
          label="Pets"
          multiSelectId="pets"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Pets
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="pets-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
    <div
      className="css-0"
      id="tools"
    >
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
      <div
        data-focus-lock-disabled="disabled"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="button"
          id="tools-button"
          isOpen={false}
          label="Tools"
          multiSelectId="tools"
          onClear={[Function]}
          onClick={[Function]}
          onMenuToggle={[Function]}
          selectedItems={Object {}}
          type="button"
        >
          <span
            className="css-scaw4q"
          >
            Tools
          </span>
          <svg
            aria-hidden={true}
            className="chakra-icon css-1grhd2q"
            focusable={false}
            id="tools-icon"
            role="img"
            title="plus icon"
            viewBox="0 0 24 24"
          >
            <g
              stroke="currentColor"
              strokeWidth="1.5"
            >
              <path
                d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                fill="none"
                strokeLinecap="round"
              />
              <path
                d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                fill="currentColor"
                strokeLinecap="round"
              />
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="11.25"
                strokeMiterlimit="10"
              />
            </g>
          </svg>
        </button>
        <div
          className="css-1hyfx7x"
          role="dialog"
        >
          <ul
            className="css-10ns9zz"
            role="list"
          />
        </div>
      </div>
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={-1}
      />
    </div>
  </div>
</fieldset>
`;
